resources/css/app.css
@tailwind base;
@tailwind components;
@tailwind utilities;


.filepond--drop-label,
.filepond--root.filepond--hopper {
    min-height: 128px !important;
}

.fi-ta-image img {
    width: 100%;
    height: auto !important;
}

.fi-icon-btn {
    color: rgb(217, 119, 6);
}

.fi-ta-record>.flex.items-center,
.fi-ta-record>.flex.items-center>.flex {
    @apply h-full;
}

.fi-ta-record.debt-record>.flex.items-center>.flex.w-full.flex-col.gap-y-3 {
    padding-top: 0 !important;
    padding-bottom: 1rem !important;
}

.fi-ta-record.debt-record>.flex.items-center>.flex.w-full.flex-col.gap-y-3>.flex-1>.block.w-full {
    padding-inline-start: 0 !important;
    padding-inline-end: 0 !important;
}

.fi-ta-record:is(.expense-change-request-record, .debt-record, .expense-record)>div:first-child .fi-ta-col-wrp {
    height: 100%;
    display: flex;
    align-items: center;
}

.fi-ta-group-header {
    width: auto !important;
}

div[x-data*="tableSortColumn"][x-data*="tableSortDirection"] {
    @apply flex-wrap gap-y-3;
}

.choices__inner {
    display: flex;
}

.fi-ta-search-field {
    min-width: 250px;
}

.choices__list.choices__list--single {
    width: 100%;
}

.fi-no-notification[x-data*="notificationComponent"]:not(.fi-inline) {
    margin-top: 80px !important;
}

.choices__inner {
    min-height: 36px;
}

